name:                 stackage-head
version:              0.0.1.0
cabal-version:        1.18
tested-with:          GHC==8.4.1
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <mark.karpov@tweag.io>
maintainer:           Mark Karpov <mark.karpov@tweag.io>
homepage:             https://github.com/tweag/stackage-head
bug-reports:          https://github.com/tweag/stackage-head/issues
category:             Testing
synopsis:             Analysis and management of results of Stackage builds
build-type:           Simple
description:          Analysis and management of results of Stackage builds.
extra-doc-files:      CHANGELOG.md
                    , README.md
data-files:           data/*.txt
                    , data/*.csv
                    , data/*.json
                    , data/per-package-logs/ALUT-0.1.0.0/*.out

source-repository head
  type:               git
  location:           https://github.com/tweag/stackage-head.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  build-depends:      QuickCheck       >= 2.7  && < 2.12
                    , aeson            >= 1.2  && < 1.4
                    , base             >= 4.10 && < 5.0
                    , bytestring       >= 0.10 && < 0.11
                    , cassava          >= 0.5  && < 0.6
                    , containers       >= 0.5  && < 0.6
                    , directory        >= 1.2.5 && < 1.4
                    , exceptions       >= 0.8  && < 0.11
                    , filepath         >= 1.4  && < 1.5
                    , hashable         >= 1.2  && < 1.3
                    , heredoc          >= 0.2
                    , lucid            >= 2.9  && < 3.0
                    , megaparsec       >= 6.4  && < 7.0
                    , modern-uri       >= 0.2.1 && < 0.3
                    , mtl              >= 2.0   && < 3.0
                    , path             >= 0.6  && < 0.7
                    , path-io          >= 1.3  && < 1.4
                    , template-haskell >= 2.10 && < 2.14
                    , text             >= 0.2  && < 1.3
                    , time             >= 1.8  && < 2.0
                    , transformers     >= 0.4  && < 0.6
                    , unordered-containers >= 0.2.8 && < 0.3
                    , vector           >= 0.11 && < 0.13
  exposed-modules:    Stackage.HEAD.BuildDiff
                    , Stackage.HEAD.BuildInfo
                    , Stackage.HEAD.BuildLogs
                    , Stackage.HEAD.BuildResults
                    , Stackage.HEAD.BuildResults.Parser
                    , Stackage.HEAD.History
                    , Stackage.HEAD.Package
                    , Stackage.HEAD.Site
                    , Stackage.HEAD.Site.HTML
                    , Stackage.HEAD.Site.Location
                    , Stackage.HEAD.Site.Resource
                    , Stackage.HEAD.Site.Type
                    , Stackage.HEAD.Trac
                    , Stackage.HEAD.Utils
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

test-suite tests
  main-is:            Spec.hs
  hs-source-dirs:     tests
  type:               exitcode-stdio-1.0
  build-depends:      QuickCheck       >= 2.7  && < 2.12
                    , base             >= 4.10 && < 5.0
                    , bytestring       >= 0.10 && < 0.11
                    , hspec            >= 2.0  && < 3.0
                    , hspec-megaparsec >= 1.0  && < 2.0
                    , megaparsec       >= 6.4  && < 7.0
                    , stackage-head
                    , text             >= 0.2  && < 1.3
                    , unordered-containers >= 0.2.8 && < 0.3
  other-modules:      Stackage.HEAD.BuildDiffSpec
                    , Stackage.HEAD.BuildResults.ParserSpec
  build-tools:        hspec-discover >= 2.0 && < 3.0
  if flag(dev)
    ghc-options:      -Wall -Werror -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wnoncanonical-monad-instances
                      -Wnoncanonical-monadfail-instances
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

executable stackage-head
  main-is:            Main.hs
  hs-source-dirs:     app/stackage-head
  build-depends:      aeson            >= 1.2  && < 1.4
                    , base             >= 4.10 && < 5.0
                    , bytestring       >= 0.10 && < 0.11
                    , directory        >= 1.2.5 && < 1.4
                    , filepath         >= 1.4  && < 1.5
                    , megaparsec       >= 6.4  && < 7.0
                    , modern-uri       >= 0.2.1 && < 0.3
                    , optparse-applicative >= 0.14 && < 1.15
                    , path             >= 0.6  && < 0.7
                    , path-io          >= 1.3  && < 1.4
                    , stackage-head
                    , text             >= 0.2  && < 1.3
                    , time             >= 1.8  && < 2.0
                    , unordered-containers >= 0.2.8 && < 0.3
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

executable fix-build-plan
  main-is:            Main.hs
  hs-source-dirs:     app/fix-build-plan
  build-depends:      base             >= 4.7 && < 5.0
                    , Cabal
                    , containers       >= 0.5 && < 0.6
                    , optparse-applicative >= 0.14 && < 1.15
                    , stackage-curator >= 0.16
                    , text             >= 0.2 && < 1.3
                    , yaml             >= 0.8 && < 0.9
  if flag(dev)
    ghc-options:      -Wall -Werror -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wnoncanonical-monad-instances
                      -Wnoncanonical-monadfail-instances
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010
